--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,15 @@
 .header {
+	padding: 10px 0;
+  margin-bottom: 10px;
+}
+
+.header__wrapper {
 	position: relative;
 }
 
 .header__switcher {
     position: absolute;
     z-index: 1;
-    left: 15px;
-    top: 15px;
+    left: 0px;
+    top: 0px;
 }
