--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,3 +13,14 @@
     left: 0px;
     top: 0px;
 }
+
+
+.header__icon {
+	background-repeat: no-repeat;
+	background-position: center left;
+	background-size: contain;  
+	display: inline-block;
+	height: 20px;
+	width: 20px;
+}
+
