--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,8 @@
 .header {
 	padding: 10px 0;
-  margin-bottom: 10px;
+	margin: 0 auto;
+  margin-bottom: 10px;  
+  display: block;
 }
 
 .header__wrapper {
@@ -8,12 +10,11 @@
 }
 
 .header__switcher {
-    position: absolute;
-    z-index: 1;
-    left: 0px;
-    top: 0px;
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
 }
-
 
 .header__icon {
 	background-repeat: no-repeat;
@@ -24,3 +25,15 @@
 	width: 20px;
 }
 
+.header__ava-wrapper,
+.header__nickname,
+.header__name,
+.header__ava,
+.header__person {
+	min-width: 100px;	
+	flex-shrink: 0;
+}
+
+.header__info {
+	flex-shrink: 1;
+}
