--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,14 @@ html {
           box-sizing: border-box;
   margin: 0;
   padding: 0;
-  min-width: 320px;  
+  min-width: 320px;
 }
 
 body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Arial"
-    sans-serif;
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Arial", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-width: 320px;
@@ -39,4 +38,26 @@ input[type="radio"].visually-hidden {
   padding: 0;
   white-space: nowrap;
   border: 0;
+}
+
+.container {
+  /*position: relative;*/
+}
+
+.fab {
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 0;
+  text-align: center;
+  right: 14px;
+  z-index: 100;
+}
+
+.fab--down {
+  bottom: 38px;
+}
+.fab--up {
+  bottom: 88px;
 }
